# aipy

./: Makefile  README.md  app.py  main.py  model.joblib  notebook.ipynb  pyproject.toml  requirements.txt  test.ipynb
sources/: model.py  schemas.py  settings.py
