[tool.poetry]
name = "aipy"
version = "0.0.0"
description = ""
authors = ["Matias Taillade", "Rémi Mandart", "Wylhem Dorville"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
runserver = "main:main"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "*"
joblib = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
pydantic = "*"
python-multipart = "*"
scikit-learn = "*"
seaborn = "*"
tensorflow = { version = "*", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin'" }
tensorflow-metal = { version = "*", markers = "sys_platform == 'darwin'" }
uvicorn = "*"
wordcloud = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ruff = "*"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["F", "I", "N"]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
