[tool.poetry]
name = "aipy"
version = "0.0.0"
description = ""
authors = ["Matias Taillade", "Rémi Mandart", "Wylhem Dorville"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
joblib = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
pydantic = "*"
python-multipart = "*"
scikit-learn = "*"
seaborn = "*"
uvicorn = "*"
wordcloud = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ruff = "*"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["F", "I", "N"]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
